--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Assignment",
+  "name": "assignment",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,8 +19,8 @@
     "lucide-react-native": "^0.373.0",
     "react": "18.2.0",
     "react-native": "0.74.0",
-    "react-native-safe-area-context": "^4.10.1",
-    "react-native-screens": "^3.31.1",
+    "react-native-gesture-handler": "^2.22.0",
+    "react-native-reanimated": "^3.16.7",
     "react-native-svg": "^13.4.0"
   },
   "devDependencies": {
@@ -42,5 +42,6 @@
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "packageManager": "yarn@3.6.4+sha512.e70835d4d6d62c07be76b3c1529cb640c7443f0fe434ef4b6478a5a399218cbaf1511b396b3c56eb03bc86424cff2320f6167ad2fde273aa0df6e60b7754029f"
 }
